Bug 150534 - StoreOpLoad pattern matching should check effects between the Store and Load
Summary: StoreOpLoad pattern matching should check effects between the Store and Load
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 150279
  Show dependency treegraph
 
Reported: 2015-10-24 12:39 PDT by Filip Pizlo
Modified: 2015-10-29 16:43 PDT (History)
11 users (show)

See Also:


Attachments
the patch (13.62 KB, patch)
2015-10-29 13:25 PDT, Filip Pizlo
no flags Details | Formatted Diff | Diff
the patch (14.33 KB, patch)
2015-10-29 13:36 PDT, Filip Pizlo
ggaren: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2015-10-24 12:39:31 PDT
This will require having some kind of alias analysis in B3.
Comment 1 Filip Pizlo 2015-10-29 13:25:21 PDT
Created attachment 264339 [details]
the patch
Comment 2 WebKit Commit Bot 2015-10-29 13:26:50 PDT
Attachment 264339 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/b3/testb3.cpp:390:  Consider using CHECK_EQ instead of CHECK(a == b)  [readability/check] [2]
ERROR: Source/JavaScriptCore/b3/testb3.cpp:391:  Consider using CHECK_EQ instead of CHECK(a == b)  [readability/check] [2]
Total errors found: 2 in 9 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Filip Pizlo 2015-10-29 13:36:08 PDT
Created attachment 264340 [details]
the patch
Comment 4 WebKit Commit Bot 2015-10-29 13:37:47 PDT
Attachment 264340 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/b3/testb3.cpp:390:  Consider using CHECK_EQ instead of CHECK(a == b)  [readability/check] [2]
ERROR: Source/JavaScriptCore/b3/testb3.cpp:391:  Consider using CHECK_EQ instead of CHECK(a == b)  [readability/check] [2]
Total errors found: 2 in 9 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 5 Geoffrey Garen 2015-10-29 14:26:02 PDT
Comment on attachment 264340 [details]
the patch

r=me
Comment 6 Filip Pizlo 2015-10-29 16:43:14 PDT
Landed in http://trac.webkit.org/changeset/191762